2-k3s/21.vidar-edge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vidar-edge
  labels:
    app: vidar-edge
