2-k3s/21.vidar-edge/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vidar-edge
  namespace: vidar-edge
  labels:
    app: vidar-edge
    kubernetes.io/service-name: vidar-edge
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.10.42
    conditions:
      ready: true
ports:
  - name: http
    port: 80
    protocol: TCP
