2-k3s/21.vidar-edge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vidar-edge
  namespace: vidar-edge
  labels:
    app: vidar-edge
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
